Prevent label overflow container for outlined variant

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -279,7 +279,6 @@
     --v-field-label-scale: #{$field-label-floating-scale}em
     font-size: var(--v-field-label-scale)
     visibility: hidden
-    max-width: 100%
 
     .v-field--center-affix &
       transform: none
@@ -392,6 +391,7 @@
     &__notch
       flex: none
       position: relative
+      width: calc(100% - $field-control-affixed-padding)
 
       &::before,
       &::after
